== HEAD

* Don't show column limits for integer and boolean types.
* Add sorting for columns and indexes. (Helpful for out-of-order migration
  execution!)
* Annotate unit tests in subfolders.
* Add generator to install rakefile that automatically annotates on db:migrate.
* Correct Gemfile to clarify which environments need which gems.
* Add an .rvmrc to facilitate clean development.
* Refactor out ActiveRecord monkey-patch to permit extending without
  side-effects.
* Use ObjectSpace to locate models to facilitate handling of models with
  non-standard capitalization.
  Note that this still requires that the inflector be configured to understand
  the special case.
* Merge away a few branches whose changes we already have in order to clean up
  the Github network graph.
* Accept String or Symbol for :position (et al) options.
* Rename "annotate" bin to "annotate_models" to avoid conflicting with
  ImageMagick.
* Add rdoc output formatting as an option.
* Add new configuration option for controlling where info is placed in
  fixtures/factories.
* Fix for models without tables.
* Fix gemspec generation now that Jeweler looks at Gemfile.
* Fix warning: `NOTE: Gem::Specification#default_executable= is deprecated with
  no replacement. It will be removed on or after 2011-10-01.`
* Fix handling of files with no trailing newline when putting annotations at
  the end of the file.

== 2.4.2 2009-11-21

* Annotates (spec|test)/factories/<model>_factory.rb files

== 2.4.1 2009-11-20

* Annotates thoughtbot's factory_girl factories (test/factories/<model>_factory.rb)
* Move default annotation position back to top

== 2.4.0 2009-12-13

* Incorporated lots of patches from the Github community, including support for Blueprints fixtures
* Several bug fixes

== 2.1 2009-10-18

* New options
  * -R to require additional files before loading the models
  * -i to show database indexes in annotations
  * -e to exclude annotating tests or fixtures